--- a/assets/css/schemes/chill.css
+++ b/assets/css/schemes/chill.css
@@ -35,3 +35,19 @@
   --color-secondary-800: 6, 95, 70;
   --color-secondary-900: 6, 78, 59;
 }
+
+.standout {
+  position: 
+  z-index:1;
+}
+.standout:before {
+  content: " ";
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:-1;
+  background-color: rgba(var(--color-primary-900), 0.5);
+ 	filter: saturate(2) contrast(2);
+}
