--- a/layouts/partials/player.html
+++ b/layouts/partials/player.html
@@ -1,11 +1,1 @@
-<div class="flex px-4 py-3 border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur my-4">
-  <span class="text-primary-400 ltr:pr-3 rtl:pl-3 flex items-center">
-    
-  </span>
-
-  <span class="dark:text-neutral-300" >
-    Alex says: "Become a Patron at <a class="font-bold" href="https://patreon.com/ChilluminatiPod/">Patreon.com/ChilluminatiPod</a> and gain access to ad-free episodes, weekly bonus minisodes, access to our Discord community, and more!"
-  </span>
-</div>
-
-<iframe id="episode-player" width="100%" height="295" src="https://embeds.audioboom.com/channels/5031584/embed?v=202301&player_theme=dark&link_color=33ff33" class="min-w-full relative w-screen max-w-[1600px] px-[30px] border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur " style="left: calc(max(-50vw,-800px) + 50%); padding:1rem; " frameborder="0" allowtransparency="allowtransparency" scrolling="no" title="Audioboom player" allow="autoplay" sandbox="allow-downloads allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"></iframe>
+<iframe id="episode-player" width="100%" height="300" src="https://embeds.audioboom.com/channels/5031584/embed?v=202301&player_theme=dark&link_color=33ff33" class="flex relative border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur "  frameborder="0" allowtransparency="allowtransparency" scrolling="no" title="Audioboom player" allow="autoplay" sandbox="allow-downloads allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"></iframe>
