--- a/assets/css/schemes/chill.css
+++ b/assets/css/schemes/chill.css
@@ -51,3 +51,17 @@
   background-color: rgba(var(--color-primary-900), 0.5);
  	filter: saturate(2) contrast(2);
 }
+
+#bb {
+  position: relative;
+  height: 27px;
+  width: 19px;
+}
+
+#bb img {
+  position: absolute;
+  bottom: 20;
+  left: 20;
+  height: 100%;
+  width: 100%;
+}
