--- a/layouts/partials/player.html
+++ b/layouts/partials/player.html
@@ -1,1 +1,9 @@
-<iframe id="episode-player" width="100%" height="300" src="https://embeds.audioboom.com/channels/5031584/embed?v=202301&player_theme=dark&link_color=33ff33" class="flex relative border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur "  frameborder="0" allowtransparency="allowtransparency" scrolling="no" title="Audioboom player" allow="autoplay" sandbox="allow-downloads allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"></iframe>
+<h2 class="mt-10 text-2xl font-extrabold mb-6" id="latest-episode-yt">Latest Episode on YouTube</h2>
+
+<iframe id="youtube-player" width="100%" height="300" src="https://www.youtube.com/embed/videoseries?si=ZuTVGCs4ViSrlrL5&amp;list=PLrIoJm0QOWUpOH3JFyL5581CzJ_OTLttL" class="flex relative border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur-2xl mb-6 " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<h2 class="mt-10 text-2xl font-extrabold mb-6" id="episode-list">All the Episodes on Audioboom</h2>
+
+<iframe id="episode-player" width="100%" height="300" src="https://embeds.audioboom.com/channels/5031584/embed?v=202301&player_theme=dark&link_color=33ff33" class="flex relative border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur-2xl "  frameborder="0" allowtransparency="allowtransparency" scrolling="no" title="Audioboom player" allow="autoplay" sandbox="allow-downloads allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"></iframe>
+
+
