--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -70,4 +70,4 @@
 </footer>
 
 {{ $bb := resources.Get "img/bean_boy_secret.png" }}
-<div id="bb" ><a href="#"><img src="{{ $bb.RelPermalink }}" /></a></div>
+<div id="bb" ><a href="#"><img src="{{ $bb.RelPermalink }}" alt="Hello!"/></a></div>
