--- a/layouts/partials/alex-says.html
+++ b/layouts/partials/alex-says.html
@@ -1,7 +1,7 @@
 <div class="standout flex px-4 py-3 border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur-2xl mb-6" >
   <span class="text-primary-400 ltr:pr-3 rtl:pl-3 flex-none items-center" >
     {{ $alex := resources.Get "img/alex.png" }}
-    <img class="" width="44" height="64" src="{{ $alex.RelPermalink }}" />
+    <img class="" width="44" height="64" src="{{ $alex.RelPermalink }}" alt="Alex's Face!" />
   </span>
 
   <span class="dark:text-neutral-300" >
