--- a/layouts/partials/player.html
+++ b/layouts/partials/player.html
@@ -1,4 +1,4 @@
-<h2 class="mt-10 text-2xl font-extrabold mb-6" id="latest-episode-yt">Latest Episode on YouTube</h2>
+<h1 class="mt-10 text-2xl font-extrabold mb-6" id="listen">Listen to our Show</h1>
 
 <iframe id="youtube-player" width="100%" height="300" src="https://www.youtube.com/embed/videoseries?si=ZuTVGCs4ViSrlrL5&amp;list=PLrIoJm0QOWUpOH3JFyL5581CzJ_OTLttL" class="flex relative border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur-2xl mb-6 " title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
