added other shows section

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,7 +1,7 @@
 <h2 class="mt-10 text-2xl font-extrabold mb-6" id="about">About</h2>
 
 <div
-    class="min-h-full border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur my-4 px-4 py-2">
+    class="min-h-full border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur-2xl my-4 px-4 py-2">
 
     <p>Since 2018, these spooky boys have been bringing you the weirdest and
         wildest stories from the internet and beyond. From the paranormal to the
