--- a/layouts/partials/recent-articles/main.html
+++ b/layouts/partials/recent-articles/main.html
@@ -1,3 +1,4 @@
 {{ partial "partials/alex-says.html" . }}
 {{ partial "partials/player.html" . }}
 {{ partial "partials/about.html" . }}
+{{ partial "partials/othershows.html" . }}
