--- a/layouts/partials/opengraph.html
+++ b/layouts/partials/opengraph.html
@@ -3,7 +3,8 @@
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
 
-<meta property="og:image" content="{{ .Site.Params.defaultOpenGraphImage | absURL }}" />
+{{- $image := resources.Get .Site.Params.defaultOpenGraphImage -}}
+<meta property="og:image" content="{{ $image | absURL }}" />
 
 {{- if .IsPage }}
 {{- $iso8601 := "2006-01-02T15:04:05-07:00" -}}
