--- a/layouts/partials/twitter_cards.html
+++ b/layouts/partials/twitter_cards.html
@@ -1,6 +1,7 @@
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="{{ .Site.Params.defaultTwitterImage | absURL }}" />
+{{- $image := resources.Get .Site.Params.defaultTwitterImage -}}
+<meta name="twitter:image" content="{{ $image | absURL }}" />
 
 <meta name="twitter:title" content="{{ .Title }}"/>
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}"/>
