--- a/layouts/partials/othershows.html
+++ b/layouts/partials/othershows.html
@@ -7,7 +7,8 @@
 
     {{ range $.Site.Data.othershows }}
     <div class="  w-full text-center">
-        <a href="{{ .URL }}" target="_blank" rel="external" class="min-w-full">
+        
+        <a href="{{ .url }}" target="_blank" rel="external" class="min-w-full">
             <div
                 class=" w-full border border-neutral-200 dark:border-neutral-700 border-2 rounded overflow-hidden shadow-2xl relative backdrop-blur">
                 {{ $image := resources.Get .image }}
