--- a/layouts/partials/twitter_cards.html
+++ b/layouts/partials/twitter_cards.html
@@ -1,7 +1,7 @@
 
 <meta name="twitter:card" content="summary_large_image" />
 {{- $image := resources.Get .Site.Params.defaultTwitterImage -}}
-<meta name="twitter:image" content="{{ $image.RelPermalink }}" />
+<meta name="twitter:image" content="{{ $image.RelPermalink  | absURL  }}" />
 
 <meta name="twitter:title" content="{{ .Title }}"/>
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}"/>
